Resolves: tdf#89179 fix Undo of Numbering Level change crash

regression from long paras presumably

Change-Id: Ib89169e52e42fcbe6f8e1ab0a2eb9871d38ff06d
(cherry picked from commit 29d2666d92e1105473f339609ba59e54a286b71c)
Reviewed-on: https://gerrit.libreoffice.org/14419
Tested-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit f45183c3c652b2c023d571ef56775ce5d3b27d2a)